[tool.poetry]
name = "py-artest"
version = "0.2.1"
description = "Automated Regression Testing Framework for Python"
authors = ["Chou Hung-Yi <hychou.svm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HYChou0515/py-artest"
homepage = "https://github.com/HYChou0515/py-artest"
keywords = ["regression-testing", "automated-testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance"
]
packages = [
    { include = "artest" },
]

[tool.poetry.extras]
dill = ["dill"]


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
isort = "^5.12.0"
autoflake = "^2.1.1"
toml = "^0.10.2"
pydocstyle = "^6.3.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
